<resources>
    <string name="app_name">tpFinal</string>
    <string name="go_to_act_1">Go to first activity</string>
    <string name="title_activity_first">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">Fisrt name</string>
    <string name="last_name">Last name</string>
    <string name="got_to_third_activity">Got to third activity</string>
    <string name="got_to_second_activity">Got to second activity</string>
</resources>
